...
        placeholderTextColor={COLORS.textPlaceholder}
        value={name}
        onChangeText={setName}
        autoFocus
      />
      <Pressable style={styles.button} onPress={next}>
        <Text style={styles.buttonText}>Continue</Text>
      </Pressable>

      <Pressable onPress={skip} style={styles.skip}>
        <Text style={styles.skipText}>Skip for now</Text>
      </Pressable>
    </KeyboardAvoidingView>
...
